[gd_scene load_steps=3 format=3 uid="uid://eve0n62ubtrx"]

[ext_resource type="Script" path="res://scenes/ui/ProjectEditor/obj_editors/PipePropertyEditor/PipePropertyEditor.gd" id="1_s3ent"]
[ext_resource type="PackedScene" uid="uid://dinchpfl3oh55" path="res://scenes/ui/ProjectEditor/obj_editors/WorldObjectPropertyEditor/WorldObjectPropertyEditor.tscn" id="3_xinwp"]

[node name="PipePropertyEditor" instance=ExtResource("3_xinwp")]
script = ExtResource("1_s3ent")

[node name="Label11" type="Label" parent="VBoxContainer/PropertiesList" index="2"]
layout_mode = 2
text = "Diameter:"

[node name="DiameterSpinBox" type="SpinBox" parent="VBoxContainer/PropertiesList" index="3"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The pipe's inner wall diameter (in inches)."
step = 0.01
value = 0.5
suffix = "in"

[node name="MaterialLabel" type="Label" parent="VBoxContainer/PropertiesList" index="4"]
layout_mode = 2
text = "Material:"

[node name="MaterialOption" type="OptionButton" parent="VBoxContainer/PropertiesList" index="5"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "The fluid's nominal flow rate (in gallons per minute) at the source of the pipe."

[node name="Label10" type="Label" parent="VBoxContainer/PropertiesList" index="6"]
layout_mode = 2
text = "Color:"

[node name="PipeColorPicker" type="ColorPickerButton" parent="VBoxContainer/PropertiesList" index="7"]
layout_mode = 2

[connection signal="value_changed" from="VBoxContainer/PropertiesList/DiameterSpinBox" to="." method="_on_diameter_spin_box_value_changed"]
[connection signal="item_selected" from="VBoxContainer/PropertiesList/MaterialOption" to="." method="_on_material_option_item_selected"]
[connection signal="color_changed" from="VBoxContainer/PropertiesList/PipeColorPicker" to="." method="_on_pipe_color_picker_color_changed"]
[connection signal="popup_closed" from="VBoxContainer/PropertiesList/PipeColorPicker" to="." method="_on_pipe_color_picker_popup_closed"]
[connection signal="pressed" from="VBoxContainer/PropertiesList/PipeColorPicker" to="." method="_on_pipe_color_picker_pressed"]
